--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fyers-api-v3": "latest",
     "ioredis": "^5.3.2",
     "node-fetch": "^3.3.2",
+    "node-telegram-bot-api": "^0.64.0",
     "prompts": "^2.4.2",
     "totp-generator": "^0.0.14"
   }
