--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@logtail/pino": "^0.4.19",
     "@mtproto/core": "^6.3.0",
     "@types/express": "^4.17.21",
     "csv-parse": "^5.5.3",
@@ -17,6 +18,8 @@
     "ioredis": "^5.3.2",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1",
     "prompts": "^2.4.2",
     "totp-generator": "^0.0.14"
   }
