--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@logtail/pino": "^0.4.19",
     "@mtproto/core": "^6.3.0",
+    "@typegoose/typegoose": "^12.1.0",
     "@types/express": "^4.17.21",
     "csv-parse": "^5.5.3",
     "express": "^4.18.2",
     "fyers-api-v3": "latest",
     "ioredis": "^5.3.2",
+    "mongoose": "^8.1.1",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "prompts": "^2.4.2",
-    "totp-generator": "^0.0.14"
+    "totp-generator": "^0.0.14",
+    "zod": "^3.22.4"
   }
 }
