--- a/package.json
+++ b/package.json
@@ -12,14 +12,26 @@
     "@logtail/pino": "^0.4.19",
     "@mtproto/core": "^6.3.0",
     "@typegoose/typegoose": "^12.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "csv-parse": "^5.5.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "fyers-api-v3": "latest",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "prompts": "^2.4.2",
