--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "csv-parse": "^5.5.3",
     "express": "^4.18.2",
     "fyers-api-v3": "latest",
+    "http-errors": "^2.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
