--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
     "pino": "^8.17.2",
+    "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
     "prompts": "^2.4.2",
     "totp-generator": "^0.0.14",
