deploy action updated

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,18 +45,18 @@ jobs:
         run: |
           ls -a
           rm -rf node_modules
-      # - name: Deploy with rsync
-      #   run: |
-      #     rsync -avz * root@${{ secrets.SSH_HOST }}:./app/ai-trader
-      #     rsync -avz .env root@${{ secrets.SSH_HOST }}:./app/ai-trader
+      - name: Deploy with rsync
+        run: |
+          rsync -avz * root@${{ secrets.SSH_HOST }}:./app/ai-trader-helper
+          rsync -avz .env root@${{ secrets.SSH_HOST }}:./app/ai-trader-helper
       - name: Executing cmd on remote
         run: |
-          ssh -y root@${{ secrets.SSH_HOST }} 'cd ~/app && echo'
-          # echo 'Installing pm2'
-          # ssh -y root@${{ secrets.SSH_HOST }} 'yarn global add pm2'
+          ssh -y root@${{ secrets.SSH_HOST }} 'cd ~/app/ai-trade-helper && echo'
+          # echo 'Installing dependencies'
+          ssh -y root@${{ secrets.SSH_HOST }} 'cd ~/app/ai-trade-helper && bun install'
           # echo 'Starting pm2 app'
-          # ssh -y root@${{ secrets.SSH_HOST }} 'cd ~/app && pm2 restart candly'
-          # ssh -y root@${{ secrets.SSH_HOST }} 'pm2 startup systemd'
-          # ssh -y root@${{ secrets.SSH_HOST }} 'pm2 save'
+          ssh -y root@${{ secrets.SSH_HOST }} 'cd ~/app/ai-trade-helper && pm2 start --interpreter ~/.bun/bin/bun index.ts --name bunapi'
+          ssh -y root@${{ secrets.SSH_HOST }} 'pm2 startup systemd'
+          ssh -y root@${{ secrets.SSH_HOST }} 'pm2 save'
       - name: Setup finish
         run: echo "Setup Finished!"
