--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node-cron": "^3.0.11",
     "cookie-parser": "^1.4.6",
     "csv-parse": "^5.5.3",
     "express": "^4.18.2",
@@ -24,6 +25,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.64.0",
     "pino": "^8.17.2",
