--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ai-trader-helper",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "test": "bun test",
+    "test:watch": "bun test --watch"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
